--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         }
     ],
     "require": {
-        "guzzlehttp/guzzle": "^6.2|^7.0.1",
+        "guzzlehttp/guzzle": "^6.2 || ^7.0.1",
         "php": ">=5.6"
     },
     "require-dev": {
